# typescape

./: Cargo.toml  README.md  deny.toml  flake.nix
.config/: nextest.toml
.github/workflows/: build.yml
src/: email.rs  id.rs  invalid.rs  lib.rs  sensitive.rs  text.rs  username.rs
src/finances/: asset.rs  currencies.rs  mod.rs
src/internet/: email.rs  hashed_password.rs  username.rs
src/lang/: mod.rs  text.rs
src/testing/: invalid.rs  mod.rs  numeric.rs  pairs.rs  proptest_compat.rs
