[package]
name = "typescape"
version = "0.0.1"
edition = "2021"
license = "MIT"

[dependencies]
chumsky = "0.9.2"
serde-email = { version = "3.0.0", default-features = false }
thiserror = "1.0.49"
uuid = { version = "1.4.1", features = ["v4"] }

arbitrary = { version = "1.3.1", features = ["derive"], optional = true }
async-trait = "0.1.74"
fake = { version = "2.8.0", optional = true }
lipsum = { version = "0.9.0", optional = true }
proptest = { version = "1.3.1", optional = true }
rand = { version = "0.8.5", optional = true }
rust_decimal = { version = "1.32.0", optional = true }
serde = { version = "1.0.189", features = ["derive"], optional = true }
strum = { version = "0.25.0", features = ["derive"] }

[features]
default = [ "testing" ]
testing = [ "dep:arbitrary", "dep:fake", "dep:rand", "dep:lipsum", "rust_decimal/rust-fuzz", "dep:proptest" ]
finances = ["dep:rust_decimal"]
internet = []
serde = ["dep:serde", "uuid/serde"]
