[package]
name = "typescape"
version = "0.0.1"
edition = "2021"
license = "MIT"

[dependencies]
chumsky = "0.9.2"
serde-email = { version = "3.0.0", default-features = false }
thiserror = "1.0.49"
uuid = { version = "1.4.1", features = ["v4"] }

fake = { version = "2.8.0", optional = true }
lipsum = { version = "0.9.0", optional = true }
proptest = { version = "1.3.1", optional = true }
rust_decimal = { version = "1.32.0", optional = true }
serde = { version = "1.0.189", features = ["derive"], optional = true }
proptest-derive = { version = "0.4.0", optional = true }

[features]
default = [ "testing" ]
testing = [
  "dep:fake",
  "dep:lipsum",
  "dep:proptest",
  "dep:proptest-derive",
  "rust_decimal/proptest",
  "rust_decimal/rust-fuzz",
]
finances = ["dep:rust_decimal"]
internet = []
serde = ["dep:serde", "uuid/serde"]
