[package]
name = "typescape"
version = "0.0.1"
edition = "2021"
license = "MIT"

[dependencies]
chumsky = "0.9.2"
serde-email = { version = "3.0.0", default-features = false }
thiserror = "1.0.49"
uuid = { version = "1.4.1", features = ["v4"] }

argon2 = { version = "0.5.2", optional = true }
fake = { version = "2.8.0", optional = true }
lipsum = { version = "0.9.0", optional = true }
proptest = { version = "1.3.1", optional = true }
serde = { version = "1.0.189", features = ["derive"], optional = true }
proptest-derive = { version = "0.4.0", optional = true }
num-bigint = { version = "0.4.4", optional = true }
num-traits = { version = "0.2.17", optional = true }
arrow2 = { version = "0.17.0", optional = true }
arrow2_convert = { version = "0.5.0", optional = true }

[dev-dependencies]
proptest = "1.3.1"
proptest-derive = "0.4.0"
lipsum = "0.9.0"

[features]
default = []
arrow = ["dep:arrow2", "dep:arrow2_convert"]
testing = [
  "dep:fake",
  "dep:lipsum",
  "dep:proptest",
  "dep:proptest-derive",
]
finances = ["dep:num-bigint", "dep:num-traits"]
internet = ["argon2"]
lang = []
serde = ["dep:serde", "uuid/serde"]
